--- a/sgbd/.project
+++ b/sgbd/.project
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-<<<<<<< HEAD
-	<name>FyDatabase-Java-main.zip_expanded</name>
-=======
-	<name>jgraph-funcionando</name>
->>>>>>> 1ba84d3 (JTable para mostrar tabela)
+	<name>SGBD</name>
 	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
-<<<<<<< HEAD
-	</buildSpec>
-	<natures>
-=======
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
@@ -21,6 +13,5 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
->>>>>>> 1ba84d3 (JTable para mostrar tabela)
 	</natures>
 </projectDescription>
