--- a/sgbd/.classpath
+++ b/sgbd/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/fyDatabase.jar"/>
 	<classpathentry kind="lib" path="lib/jgraphx.jar"/>
+	<classpathentry kind="lib" path="lib/poi/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/poi/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="lib/poi/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="lib/poi/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="lib/poi/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
