--- a/sgbd/pom.xml
+++ b/sgbd/pom.xml
@@ -70,11 +70,10 @@
     		<version>2.20.0</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.tinyjee.jgraphx/jgraphx -->
 		<dependency>
-    		<groupId>org.tinyjee.jgraphx</groupId>
-    		<artifactId>jgraphx</artifactId>
-    		<version>3.4.1.3</version>
+			<groupId>com.github.vlsi.mxgraph</groupId>
+			<artifactId>jgraphx</artifactId>
+			<version>4.2.2</version>		
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/net.datafaker/datafaker -->
